--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,6 +249,22 @@ body {
     width: 93%;
     margin-left: 66px;
     margin-top: 98px;
+    transition: 0.5s ease;
+}
+
+.push {
+    margin-left: 440px;
+}
+
+.overlay {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #222;
+    z-index: 3;
+    opacity: 0.3;
+    transition: opacity 0.5s linear;
 }
 
 .card {
@@ -714,6 +730,10 @@ body {
 
 .search-box {
     width: 210px;
+}
+
+.panel-results {
+    display: block;
 }
 
 /* ==========================================================================
@@ -1226,6 +1246,12 @@ body {
 
 .invisible {
     visibility: hidden;
+}
+
+.fade-out {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s linear;
 }
 
 /*
