--- a/public/template/webconsole.html
+++ b/public/template/webconsole.html
@@ -55,11 +55,13 @@
                     <div class="card-content">
                         <table class="comments-table">
                             <tr class="peter-river">
+                                <th>Status</th>
                                 <th>VHID</th>
                                 <th>IP Address</th>
                                 <th>SNMP String</th>
                             </tr>
                             <tr>
+                                <td>DOWN</td>
                                 <td>CNYLAT3-MONDELEZ-RTR-1</td>
                                 <td>202.90.42.151</td>
                                 <td>pingonly</td>
